更新微信注册Universal Links、markdown分享、更新pod

--- a/PandaNote/Info.plist
+++ b/PandaNote/Info.plist
@@ -35,6 +35,7 @@
 	<array>
 		<string>weixin</string>
 		<string>wechat</string>
+		<string>weixinULAPI</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
