--- a/PandaNote/Info.plist
+++ b/PandaNote/Info.plist
@@ -28,6 +28,14 @@
 				<string>wx37af47629351b5c0</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>pandanote</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
