--- a/PandaNote/PandaNote.entitlements
+++ b/PandaNote/PandaNote.entitlements
@@ -6,5 +6,15 @@
 	<array>
 		<string>applinks:p.agolddata.com</string>
 	</array>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.device.audio-input</key>
+	<true/>
+	<key>com.apple.security.device.camera</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.personal-information.photos-library</key>
+	<true/>
 </dict>
 </plist>
