--- a/PandaNote/PandaNote.entitlements
+++ b/PandaNote/PandaNote.entitlements
@@ -16,5 +16,7 @@
 	<true/>
 	<key>com.apple.security.personal-information.photos-library</key>
 	<true/>
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
 </dict>
 </plist>
