增加查找功能、快捷键操作 find and highlight text

--- a/PandaNote/Setting/View/app_setting_option.json
+++ b/PandaNote/Setting/View/app_setting_option.json
@@ -51,6 +51,11 @@
     "key": "recursiveDepthWhenSearch",
     "showSwitch": "",
     "detail": "强制递归搜索子文件夹"
+  },
+  {
+    "name": "清除缓存",
+    "key": "pp_clearCache",
+    "detail": "0 MB"
   }],
   [
   {
