--- a/PandaNote/Info.plist
+++ b/PandaNote/Info.plist
@@ -62,6 +62,18 @@
 	<string>保存图片到您的相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>我们需要添加图片到笔记</string>
+	<key>NSUbiquitousContainers</key>
+	<dict>
+		<key>iCloud.com.yijian.yijianappaa</key>
+		<dict>
+			<key>NSUbiquitousContainerIsDocumentScopePublic</key>
+			<true/>
+			<key>NSUbiquitousContainerName</key>
+			<string>pandanotez</string>
+			<key>NSUbiquitousContainerSupportedFolderLevels</key>
+			<string>Any</string>
+		</dict>
+	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
