--- a/PandaNote/PandaNote.entitlements
+++ b/PandaNote/PandaNote.entitlements
@@ -7,7 +7,17 @@
 		<string>applinks:p.agolddata.com</string>
 	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
-	<array/>
+	<array>
+		<string>iCloud.com.agolddata.pandanotex</string>
+	</array>
+	<key>com.apple.developer.icloud-services</key>
+	<array>
+		<string>CloudDocuments</string>
+	</array>
+	<key>com.apple.developer.ubiquity-container-identifiers</key>
+	<array>
+		<string>iCloud.com.agolddata.pandanotex</string>
+	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.cs.disable-library-validation</key>
