--- a/PandaNote/Setting/View/app_setting_option.json
+++ b/PandaNote/Setting/View/app_setting_option.json
@@ -1,79 +1,96 @@
 [
   [
-  {
-    "name": "底部Tab默认选中第几个",
-    "key": "pp_tab_selected_index",
-    "category": "常规设置",
-    "ATTENTION": "注意！每个数组仅第一个设置category！"
-  }],
+    {
+      "name": "底部Tab默认选中第几个",
+      "key": "pp_tab_selected_index",
+      "category": "常规设置",
+      "ATTENTION": "注意！每个数组仅第一个设置category！"
+    }
+  ],
   [
-  {
-    "name": "退出时自动保存文本",
-    "key": "saveMarkdownWhenClose",
-    "category": "文本编辑设置",
-    "ATTENTION": "注意！每个数组仅第一个设置category！",
-    "showSwitch": "1"
-  },
-  {
-    "name": "markdown文本解析器设置",
-    "detail": "试验性功能，请谨慎使用(不推荐Down)",
-    "key": "pp_markdownParseMethod",
-  },
-  {
-    "name": "编辑器主题样式",
-    "key": "pp_markdownEditorStyle",
-  }],
+    {
+      "name": "退出时自动保存文本",
+      "key": "saveMarkdownWhenClose",
+      "category": "文本编辑设置",
+      "ATTENTION": "注意！每个数组仅第一个设置category！",
+      "showSwitch": "1"
+    },
+    {
+      "name": "markdown文本解析器设置",
+      "detail": "试验性功能，请谨慎使用(不推荐Down)",
+      "key": "pp_markdownParseMethod"
+    },
+    {
+      "name": "编辑器主题样式",
+      "key": "pp_markdownEditorStyle"
+    }
+  ],
   [
-  {
-    "name": "上传图片名称使用创建日期",
-    "key": "uploadImageNameUseCreationDate",
-    "category": "文件设置",
-    "showSwitch": "1"
-  },
-  {
-    "name": "上传照片后删除原照片",
-    "key": "deletePhotoAfterUploading",
-    "showSwitch": "1",
-    "detail": ""
-  },
-  {
-    "name": "照片压缩后上传",
-    "key": "pp_compressImageBeforeUpload",
-    "showSwitch": "1"
-  },
-  {
-    "name": "图片压缩质量",
-    "key": "pp_imageCompressionQuality",
-    "detail": "数字越小越模糊，推荐设置0.5~0.2"
-  },
-  {
-    "name": "搜索递归层数",
-    "key": "recursiveDepthWhenSearch",
-    "showSwitch": "",
-    "detail": "强制递归搜索子文件夹"
-  },
-  {
-    "name": "清除缓存",
-    "key": "pp_clearCache",
-    "detail": "0 MB"
-  }],
+    {
+      "name": "上传图片名称使用创建日期",
+      "key": "uploadImageNameUseCreationDate",
+      "category": "文件设置",
+      "showSwitch": "1"
+    },
+    {
+      "name": "上传照片后删除原照片",
+      "key": "deletePhotoAfterUploading",
+      "showSwitch": "1",
+      "detail": ""
+    },
+    {
+      "name": "照片压缩后上传",
+      "key": "pp_compressImageBeforeUpload",
+      "showSwitch": "1"
+    },
+    {
+      "name": "图片压缩质量",
+      "key": "pp_imageCompressionQuality",
+      "detail": "数字越小越模糊，推荐设置0.5~0.2"
+    },
+    {
+      "name": "搜索递归层数",
+      "key": "recursiveDepthWhenSearch",
+      "showSwitch": "",
+      "detail": "强制递归搜索子文件夹"
+    },
+    {
+      "name": "清除缓存",
+      "key": "pp_clearCache",
+      "detail": "0 MB"
+    }
+  ],
   [
-  {
-    "name": "保存设置到",
-    "category": "云同步设置"
-  }],
+    {
+      "name": "备份App偏好设置",
+      "category": "云同步设置"
+    },
+    {
+      "name": "恢复App偏好设置",
+      "category": "云同步设置"
+    },
+    {
+      "name": "备份服务器配置",
+      "category": "云同步设置"
+    },
+    {
+      "name": "恢复服务器配置",
+      "category": "云同步设置"
+    }
+  ],
   [
-  {
-    "name": "允许读取剪贴板以解析",
-    "category": "隐私设置",
-    "key": "allowReadPasteBoard",
-    "comment": "允许读取解析剪贴板然后以纯文本形式分享等",
-    "showSwitch": "1"
-  }],
+    {
+      "name": "允许读取剪贴板以解析",
+      "category": "隐私设置",
+      "key": "allowReadPasteBoard",
+      "comment": "允许读取解析剪贴板然后以纯文本形式分享等",
+      "showSwitch": "1"
+    }
+  ],
   [
-  {
-    "name": "FLEX Debug Enable",
-    "category": "调试设置"
-
-  }]
+    {
+      "name": "FLEX Debug Enable",
+      "category": "调试设置"
+    }
+  ]
 ]
